kernel/tests/snapshots/abi_snapshot__entry_driver_up.snap
---
source: kernel/tests/abi_snapshot.rs
expression: driver_up ()
---
{
  "entry": "driver_up",
  "seq": 45,
  "driver": "model"
}
