kernel/tests/snapshots/abi_snapshot__entry_exited.snap
---
source: kernel/tests/abi_snapshot.rs
expression: exited ()
---
{
  "entry": "exited",
  "seq": 7,
  "agent": 0,
  "result": "2222222222222222222222222222222222222222222222222222222222222222"
}
