kernel/tests/snapshots/abi_snapshot__entry_resolved.snap
---
source: kernel/tests/abi_snapshot.rs
expression: resolved ()
---
{
  "entry": "resolved",
  "seq": 5,
  "agent": 1,
  "matched": 4
}
