kernel/tests/snapshots/abi_snapshot__entry_sent.snap
---
source: kernel/tests/abi_snapshot.rs
expression: sent ()
---
{
  "entry": "sent",
  "msg": {
    "abi": 3,
    "seq": 12,
    "from": {
      "kind": "agent",
      "id": 0
    },
    "corr": 0,
    "kind": "request",
    "consumed": null,
    "payload": "abababababababababababababababababababababababababababababababab"
  },
  "via": 0
}
