kernel/tests/snapshots/abi_snapshot__entry_spawned_child.snap
---
source: kernel/tests/abi_snapshot.rs
expression: spawned_child ()
---
{
  "entry": "spawned",
  "seq": 2,
  "parent": 0,
  "agent": 1,
  "ns": {
    "caps": []
  },
  "budget": {
    "tokens": 20,
    "depth": 1
  }
}
