kernel/tests/snapshots/abi_snapshot__entry_tick.snap
---
source: kernel/tests/abi_snapshot.rs
expression: tick ()
---
{
  "entry": "tick",
  "seq": 4,
  "now": 50
}
