kernel/tests/snapshots/abi_snapshot__entry_verdicts.snap
---
source: kernel/tests/abi_snapshot.rs
expression: verdicts ()
---
{
  "entry": "verdicts",
  "seq": 32,
  "point": "on_spawn",
  "subject": 1,
  "roll": [
    [
      0,
      "allow"
    ],
    [
      1,
      {
        "emit": {
          "to": 0,
          "payload": "4444444444444444444444444444444444444444444444444444444444444444"
        }
      }
    ],
    [
      2,
      {
        "failed": {
          "mode": "closed",
          "error": "5555555555555555555555555555555555555555555555555555555555555555"
        }
      }
    ],
    [
      3,
      {
        "deny": "6666666666666666666666666666666666666666666666666666666666666666"
      }
    ]
  ]
}
